Laying grounds for manual mod filtering